test/fail/M0200.mo
import Prim = "mo:⛔";

ignore Prim.componentCall(123);
